# Indi_Studio

./: CMakeCache.txt  CMakeLists.txt  Makefile  clear.sh  cmake_install.cmake  make.sh
assets/: Bomb.b3d  pedobear_animated.b3d
include/: Alphabet.hpp  Bomb.hpp  Bomberman.hpp  Flame.hpp  Game.hpp  GameOverTransition.hpp  GameTransition.hpp  ISGE.hpp  Logger.hpp  MainMenu.hpp  Map.hpp  Player.hpp  SoundMenu.hpp  String.hpp  Utils.hpp
src/: Main.cpp
src/engine/: ISGE.cpp
src/game/: Alphabet.cpp  Bomb.cpp  Bomberman.cpp  Flame.cpp  Game.cpp  GameOverTransition.cpp  GameTransition.cpp  MainMenu.cpp  Map.cpp  Player.cpp  SoundMenu.cpp
src/misc_utils/: Logger.cpp  String.cpp
